// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectProject /> should render correctly 1`] = `
<div>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectProject-filter-project-listbox"
    aria-haspopup="true"
    component={[Function]}
    id="SelectProject-filter-project"
    label="type-project"
    name="project"
    options={
      Array [
        Object {
          "label": "Save the world",
          "value": "project1",
        },
        Object {
          "label": "Decrease the GES to 55% before 2030",
          "value": "project2",
        },
      ]
    }
    placeholder="event.searchform.all_projects"
    role="combobox"
  />
</div>
`;

exports[`<SelectProject /> should render empty list 1`] = `
<div>
  <Field
    aria-autocomplete="list"
    aria-controls="SelectProject-filter-project-listbox"
    aria-haspopup="true"
    component={[Function]}
    id="SelectProject-filter-project"
    label="type-project"
    name="project"
    options={Array []}
    placeholder="event.searchform.all_projects"
    role="combobox"
  />
</div>
`;
